--- a/quote.css
+++ b/quote.css
@@ -20,3 +20,8 @@ html, body{
     background-color: rgb(30, 77, 30);
     color:rgb(202, 191, 191);
 }
+#heading{
+    text-align: center;
+    font-family: comic san MS;
+    text-decoration: underline;
+}
